# M5

./: .ai-enrich.toml  .aider.conf.yml  .codex  .cursorrules  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLOUD.md  Dockerfile  Forecast.ipynb  LICENSE  LinearRegression.ipynb  MLForecast.ipynb  Makefile  NaiveForecast.ipynb  README.md  Score.ipynb  WriteUp.md  aws-instructions.md  cloud-progress.md  docker-compose.yaml  install.sh  prompt-fva.md  pyproject.toml
.ai/: AI-CONTEXT.md
.ai/.claude/: AGENTS.md  CLAUDE.md
.ai/.claude/wiki/: AGENTS.md
.ai/.gemini/: GEMINI.md
.ai/plans/: ImprovementPlan.md  api_loadtest.md  cloud-progress.md  cloud_pipeline.md
.claude/.rm/: requirements.txt
.claude/wiki/: README.md  index.md  log.md
.gemini/: GEMINI.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: pipeline.html
cloud/: .gitignore  Makefile.cloud  README.md
cloud/cloud-init/: _user_data.sh.tftpl  serve.sh  train-safe.sh  train.sh
cloud/scripts/: pull_artifact.sh  push_artifact.sh  setup_gcp_iam.sh
cloud/systemd/: m5-bootstrap.service  m5-train.service
cloud/terraform/aws/: main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
cloud/terraform/azure/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
cloud/terraform/gcp/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
cloud/terraform/hetzner/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
configs/m5/: hier.yaml  hier_experiments.yaml  lgbm.yaml  stats.yaml
docs/: CLOUD.md  README.md  WriteUp.md  api_loadtest.md  m5_leaderboard.md
docs/developer/: AGENTS.md  ARCHITECTURE.md  DEVELOPMENT.md  GUIDE.md  SETUP.md  TROUBLESHOOTING.md  cloud-train.md
documentation/: hierarchy-guide.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/data/: accuracy-dashboard.sample.json
frontend/scripts/: export_dashboard_data.py
frontend/src/: App.vue  main.js
frontend/src/assets/: styles.css
frontend/src/components/: DataTable.vue  HeatmapGrid.vue  KpiCard.vue  LineChart.vue  MetricBarChart.vue
frontend/src/lib/: dashboard.js  dashboard.test.js  format.js
loadtest/: __init__.py  aggregate.py  locustfile.py  sweep.py  tiers.yaml
notebooks/: 00_run_pipeline.ipynb  01_eda.ipynb  02_naive_forecast.ipynb  03_stats_forecast.ipynb  04_linear_regression.ipynb  05_mlforecast_lgbm.ipynb  06_score.ipynb  07_toto_forecast.ipynb  Forecast.ipynb  LinearRegression.ipynb  NaiveForecast.ipynb
notebooks/bayesian/: 01_hierarchical_negbin.ipynb  02_cv_evaluation.ipynb  03_zero_inflation_zinb.ipynb  04_hierarchical_routed.ipynb
notebooks/conformal/: 01_conformal_intervals.ipynb
notebooks/hierarchical/: 00_method_map.ipynb  01_capped_cv_experiments.ipynb  README.md
scripts/: block-ai-push.sh  bootstrap.sh  compare_scores.py  create_s3_bucket.sh  download_data.sh  monitor_aws.sh  monitor_cloud_progress.sh
src/: plots.py  process.py  score.py
src/m5/: __init__.py  backend.py  cli.py  config.py  conformal.py  cv.py  data.py  evaluation.py  features.py  hierarchy.py  legacy.py  logging.py  metrics.py  plots.py  recipes.py  scoring.py
src/m5/models/: __init__.py  bayesian.py  hierarchical.py  lgbm.py  segmented.py  stats.py  toto.py
src/m5/reporting/: __init__.py  figures.py  report.py  save.py  style.py
src/m5/serve/: __init__.py  __main__.py  app.py  auth.py  config.py  deps.py  errors.py  observability.py  schemas.py  state.py
src/m5/serve/routes/: __init__.py  health.py  metadata.py  predict.py
src/m5/viz/: __init__.py  pipeline.py
src/scripts/windows/: conda-env.yml  install.ps1
tests/: conftest.py  test_data.py  test_features.py  test_models_smoke.py
tests/integration/: test_cv.py  test_models.py  test_models_bayesian.py  test_models_toto.py  test_pipeline.py  test_reporting_smoke.py  test_serve_endpoints.py
tests/smoke/: test_cli.py  test_imports.py  test_package.py  test_serve_imports.py
tests/unit/: test_accuracy.py  test_bayesian_helpers.py  test_cli_download.py  test_config.py  test_conformal.py  test_data.py  test_evaluation.py  test_features.py  test_hierarchy.py  test_metrics.py  test_recipes.py  test_scoring.py  test_serve_schemas.py  test_viz.py
