[project]
name = "m5"
version = "0.2.0"
description = "Reproducible M5 Forecasting Accuracy solution — Nixtla + LightGBM + Theta/ETS"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Rick Arko", email = "rick.arko17@gmail.com" }]
license = { text = "MIT" }
keywords = ["forecasting", "m5", "nixtla", "lightgbm", "time-series"]

dependencies = [
    # --- Forecasting stack (Nixtla) ---------------------------------
    "statsforecast>=2.0.2",
    "mlforecast>=1.0.2",
    "utilsforecast>=0.2.12",
    "datasetsforecast>=1.0.0",
    "hierarchicalforecast>=1.2.0",
    # --- ML / numerics ----------------------------------------------
    "lightgbm>=4.5.0",
    "numpy>=2.0",
    # Pinned <3 — pandas 3.0's PyArrow-backed `str` dtype isn't accepted by LightGBM
    # (and forces a datasetsforecast downgrade). Revisit when the Nixtla stack
    # publishes pandas-3-compatible releases. See closed PR #9 for failure details.
    "pandas>=2.2,<3",
    "polars>=1.21",
    "pyarrow>=18.0",
    "scikit-learn>=1.5",
    # --- Plumbing ---------------------------------------------------
    "typer>=0.15",
    "loguru>=0.7.2",
    "python-dotenv>=1.0",
    "tqdm>=4.67",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # --- Plotting (light) -------------------------------------------
    "matplotlib>=3.9",
    "seaborn>=0.13",
    # --- Model persistence ------------------------------------------
    # joblib is already pulled transitively via scikit-learn; making it
    # explicit keeps the `m5 train` artifact contract stable across
    # sklearn major versions.
    "joblib>=1.4",
]

[project.scripts]
m5 = "m5.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m5"]

[tool.hatch.build.targets.sdist]
include = ["src/m5", "README.md", "WriteUp.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pandas-stubs>=2.2",
    "types-tqdm>=4.67",
    "types-pyyaml>=6.0",
    "pre-commit>=4.0",
]
notebook = [
    "jupyter>=1.1",
    "ipykernel>=7.2.0,<8",
    "jupyterlab>=4.3",
    "plotly>=5.24",
]
serve = [
    # FastAPI + uvicorn[standard] (which pulls httptools/watchfiles/websockets/httpx).
    # We pin `fastapi[standard]` so the test suite can use `fastapi.testclient.TestClient`
    # (depends on httpx) without an extra dev dep.
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "prometheus-client>=0.21",
]

# ----------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PD", "RUF"]
# B008    — Typer pattern uses typer.Option(...) in defaults
# RUF002  — allow unicode `×` / `→` in docstrings
# PD013   — `.stack().idxmin()` returns a MultiIndex; `.melt()` doesn't preserve it
# SIM105  — `try/except/pass` is fine here; `contextlib.suppress` isn't strictly clearer
# SIM108  — `if/else` reads better than nested ternaries when branches diverge
ignore = ["E501", "B008", "RUF001", "RUF002", "PD013", "SIM105", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "PD"]
"src/m5/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/m5"]

# Library stubs (lightgbm, mlforecast, statsforecast, …) tend to be stricter
# than the libraries' real runtime. We trust our own typing in `src/m5/*` and
# silence stub-induced friction at the boundary.
[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "mlforecast.*",
    "statsforecast.*",
    "utilsforecast.*",
    "datasetsforecast.*",
    "hierarchicalforecast.*",
]
follow_imports = "silent"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "smoke: Fast sanity checks — imports, CLI help, package metadata. Run on every save.",
    "unit: Pure-function tests for config, data shaping, features, evaluation.",
    "integration: End-to-end on toy data — models, cross-validation, pipeline.",
    "slow: Wall-clock > ~5s; skip in tight loops with `-m 'not slow'`.",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/m5"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
